--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,17 @@
 {
   "compilerOptions": {
+    "allowJs": true,
     "baseUrl": ".",
     "paths": {
       "assets/*": ["src/assets/*"],
+      "components/*":["src/components/*"],
+      "content/*":["src/content/*"],
+      "layouts/*":["src/layouts/*"],
       "_test-page/*": ["src/_test-page/*"],
       "layout-components/*":["src/components/layout-components/*"],
       "page-components/*":["src/components/page-components/*"],
       "image-components/*":["src/components/image-components/*"],
     }
   },
-  "extends": "astro/tsconfigs/base"
+  "extends": "astro/tsconfigs/strict"
 }
